Update Dockerfile
ready for test